# cargo-purge

./: Cargo.toml  readme.md
src/: main.rs  package.rs  tree.rs  visitor.rs  workspace.rs
test_workspaces/workspace_1/: cargo.toml
test_workspaces/workspace_1/lib/package_1/: Cargo.toml
test_workspaces/workspace_1/lib/package_1/src/: lib.rs
test_workspaces/workspace_1/lib/package_1/src/private_module/: public.rs
test_workspaces/workspace_1/lib/package_1/src/public_module/: mod.rs  private.rs
test_workspaces/workspace_1/lib/package_2/: Cargo.toml
test_workspaces/workspace_1/lib/package_2/src/: lib.rs  private.rs  public.rs
test_workspaces/workspace_2/: cargo.toml
test_workspaces/workspace_2/other_package_1/: Cargo.toml
test_workspaces/workspace_2/other_package_1/src/: main.rs
