[package]
name = "cargo-purge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.70"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "visit"] }
toml = "0.7"

[dev-dependencies]
serde_json = "1.0"
